--- a/Project 4/Project 4/Project 4.csproj
+++ b/Project 4/Project 4/Project 4.csproj
@@ -46,10 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CashierView.cs">
+    <Compile Include="GeneratedCode\CashierView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CashierView.Designer.cs">
+    <Compile Include="GeneratedCode\CashierView.Designer.cs">
       <DependentUpon>CashierView.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneratedCode\CustomerServiceView.cs">
@@ -83,8 +83,14 @@
     <Compile Include="GeneratedCode\TransactionScreen.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="CashierView.resx">
+    <EmbeddedResource Include="GeneratedCode\CashierView.resx">
       <DependentUpon>CashierView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GeneratedCode\CustomerServiceView.resx">
+      <DependentUpon>CustomerServiceView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GeneratedCode\RebateView.resx">
+      <DependentUpon>RebateView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
