--- a/Project 4/Project 4/Project 4.csproj
+++ b/Project 4/Project 4/Project 4.csproj
@@ -52,11 +52,11 @@
     <Compile Include="GeneratedCode\CashierOutputView.Designer.cs">
       <DependentUpon>CashierOutputView.cs</DependentUpon>
     </Compile>
-    <Compile Include="GeneratedCode\CashierView.cs">
+    <Compile Include="GeneratedCode\CashierInputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GeneratedCode\CashierView.Designer.cs">
-      <DependentUpon>CashierView.cs</DependentUpon>
+    <Compile Include="GeneratedCode\CashierInputView.Designer.cs">
+      <DependentUpon>CashierInputView.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneratedCode\CustomerServiceOutputView.cs">
       <SubType>Form</SubType>
@@ -64,24 +64,30 @@
     <Compile Include="GeneratedCode\CustomerServiceOutputView.Designer.cs">
       <DependentUpon>CustomerServiceOutputView.cs</DependentUpon>
     </Compile>
-    <Compile Include="GeneratedCode\CustomerServiceView.cs">
+    <Compile Include="GeneratedCode\CustomerServiceInputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GeneratedCode\CustomerServiceView.Designer.cs">
-      <DependentUpon>CustomerServiceView.cs</DependentUpon>
+    <Compile Include="GeneratedCode\CustomerServiceInputView.Designer.cs">
+      <DependentUpon>CustomerServiceInputView.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneratedCode\Database.cs" />
+    <Compile Include="GeneratedCode\GenerateRebateInputView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GeneratedCode\GenerateRebateInputView.Designer.cs">
+      <DependentUpon>GenerateRebateInputView.cs</DependentUpon>
+    </Compile>
     <Compile Include="GeneratedCode\GenRebateHandler.cs" />
     <Compile Include="GeneratedCode\EnterRebateHandler.cs" />
     <Compile Include="GeneratedCode\Item.cs" />
     <Compile Include="GeneratedCode\ModelI.cs" />
     <Compile Include="GeneratedCode\Observer.cs" />
     <Compile Include="GeneratedCode\Rebate.cs" />
-    <Compile Include="GeneratedCode\RebateCheckOutputView.cs">
+    <Compile Include="GeneratedCode\GenerateRebateOutputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GeneratedCode\RebateCheckOutputView.Designer.cs">
-      <DependentUpon>RebateCheckOutputView.cs</DependentUpon>
+    <Compile Include="GeneratedCode\GenerateRebateOutputView.Designer.cs">
+      <DependentUpon>GenerateRebateOutputView.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneratedCode\RebateManager.cs" />
     <Compile Include="GeneratedCode\RebateOutputView.cs">
@@ -90,11 +96,11 @@
     <Compile Include="GeneratedCode\RebateOutputView.Designer.cs">
       <DependentUpon>RebateOutputView.cs</DependentUpon>
     </Compile>
-    <Compile Include="GeneratedCode\RebateView.cs">
+    <Compile Include="GeneratedCode\RebateInputView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GeneratedCode\RebateView.Designer.cs">
-      <DependentUpon>RebateView.cs</DependentUpon>
+    <Compile Include="GeneratedCode\RebateInputView.Designer.cs">
+      <DependentUpon>RebateInputView.cs</DependentUpon>
     </Compile>
     <Compile Include="GeneratedCode\RetunHandler.cs" />
     <Compile Include="GeneratedCode\ReturnsManager.cs" />
@@ -103,14 +109,14 @@
     <Compile Include="GeneratedCode\TransactionHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="GeneratedCode\CashierView.resx">
-      <DependentUpon>CashierView.cs</DependentUpon>
+    <EmbeddedResource Include="GeneratedCode\CashierInputView.resx">
+      <DependentUpon>CashierInputView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GeneratedCode\CustomerServiceView.resx">
-      <DependentUpon>CustomerServiceView.cs</DependentUpon>
+    <EmbeddedResource Include="GeneratedCode\CustomerServiceInputView.resx">
+      <DependentUpon>CustomerServiceInputView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GeneratedCode\RebateView.resx">
-      <DependentUpon>RebateView.cs</DependentUpon>
+    <EmbeddedResource Include="GeneratedCode\RebateInputView.resx">
+      <DependentUpon>RebateInputView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
